--- a/sdk/healthdataaiservices/azure-health-deidentification/customization/pom.xml
+++ b/sdk/healthdataaiservices/azure-health-deidentification/customization/pom.xml
@@ -3,10 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.azure</groupId>
+    <artifactId>azure-health-deidentification</artifactId>
+    <version>1.0.0</version>
+    <relativePath>../../azure-health-deidentification</relativePath>
+  </parent>
 
-  <groupId>com.azure</groupId>
-  <version>1.0.0-beta.1</version>
-  <artifactId>customization</artifactId>
+  <version>1.0.0</version>
+  <artifactId>azure-health-deidentification-customization</artifactId>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
@@ -14,11 +19,4 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.azure.tools</groupId>
-      <artifactId>azure-autorest-customization</artifactId>
-      <version>1.0.0-beta.8</version>
-    </dependency>
-  </dependencies>
 </project>
