--- a/sdk/networkanalytics/azure-resourcemanager-networkanalytics/pom.xml
+++ b/sdk/networkanalytics/azure-resourcemanager-networkanalytics/pom.xml
@@ -18,7 +18,7 @@
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for Network Analytics Management</name>
-  <description>This package contains Microsoft Azure SDK for Network Analytics Management SDK. For documentation on how to use this package, please see https://aka.ms/azsdk/java/mgmt.  Package tag package-2023-11-15.</description>
+  <description>Please note, this package has been deprecated and will no longer be maintained after 03/14/2025.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
   <licenses>
