--- a/sdk/networkanalytics/azure-resourcemanager-networkanalytics/pom.xml
+++ b/sdk/networkanalytics/azure-resourcemanager-networkanalytics/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-networkanalytics</artifactId>
-  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-networkanalytics;current} -->
+  <version>1.0.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-networkanalytics;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for Network Analytics Management</name>
