--- a/sdk/networkanalytics/azure-resourcemanager-networkanalytics/pom.xml
+++ b/sdk/networkanalytics/azure-resourcemanager-networkanalytics/pom.xml
@@ -18,7 +18,7 @@
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for Network Analytics Management</name>
-  <description>Please note, this package has been deprecated and will no longer be maintained after 03/14/2025.</description>
+  <description>Please note, this package has been deprecated and will no longer be maintained after 03/14/2025. Refer to our deprecation policy (https://aka.ms/azsdk/support-policies) for more details.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
   <licenses>
