--- a/sdk/spring/spring-cloud-azure-starter-monitor/pom.xml
+++ b/sdk/spring/spring-cloud-azure-starter-monitor/pom.xml
@@ -17,8 +17,9 @@
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <jacoco.skip>true</jacoco.skip> <!--Most of the tests are done in the spring-cloud-azure-starter-monitor-test module-->
+    <jacoco.skip>true</jacoco.skip> <!-- Most of the tests are done in the spring-cloud-azure-starter-monitor-test module. -->
     <spotless.skip>true</spotless.skip>
+    <javadoc.skip>true</javadoc.skip> <!-- No Java API exposed. -->
   </properties>
 
   <licenses>
