--- a/sdk/spring/spring-messaging-azure-eventhubs/pom.xml
+++ b/sdk/spring/spring-messaging-azure-eventhubs/pom.xml
@@ -52,7 +52,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-messaging-eventhubs-checkpointstore-blob</artifactId>
-      <version>1.21.0-beta.1</version> <!-- {x-version-update;com.azure:unreleased_azure-messaging-eventhubs-checkpointstore-blob;dependency} -->
+      <version>1.21.0-beta.1</version> <!-- {x-version-update;unreleased_com.azure:azure-messaging-eventhubs-checkpointstore-blob;dependency} -->
       <optional>true</optional>
     </dependency>
 
