--- a/eng/pipelines/patch-release.yml
+++ b/eng/pipelines/patch-release.yml
@@ -4,16 +4,116 @@ extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client-patch.yml
   parameters:
     artifacts:
-    - name: azure-sdk-template
+    - name: azure-messaging-eventhubs
       groupId: com.azure
-      safeName: azuresdktemplate
-      ServiceDirectory: template
-    - name: azure-sdk-template-two
+      safeName: azuremessagingeventhubs
+      ServiceDirectory: eventhubs
+    - name: azure-security-keyvault-secrets
       groupId: com.azure
-      safeName: azuresdktemplatetwo
-      ServiceDirectory: template
-    - name: azure-sdk-template-three
+      safeName: azuresecuritykeyvaultsecrets
+      ServiceDirectory: keyvault
+    - name: azure-containers-containerregistry
       groupId: com.azure
-      safeName: azuresdktemplatethree
-      ServiceDirectory: template
+      safeName: azurecontainerscontainerregistry
+      ServiceDirectory: containerregistry
+    - name: azure-ai-metricsadvisor
+      groupId: com.azure
+      safeName: azureaimetricsadvisor
+      ServiceDirectory: metricsadvisor
+    - name: azure-identity-extensions
+      groupId: com.azure
+      safeName: azureidentityextensions
+      ServiceDirectory: identity/azure-identity-extensions
+    - name: azure-messaging-eventhubs-checkpointstore-blob
+      groupId: com.azure
+      safeName: azuremessagingeventhubscheckpointstoreblob
+      ServiceDirectory: eventhubs
+    - name: azure-developer-loadtesting
+      groupId: com.azure
+      safeName: azuredeveloperloadtesting
+      ServiceDirectory: loadtesting
+    - name: azure-messaging-eventgrid
+      groupId: com.azure
+      safeName: azuremessagingeventgrid
+      ServiceDirectory: eventgrid
+    - name: azure-mixedreality-authentication
+      groupId: com.azure
+      safeName: azuremixedrealityauthentication
+      ServiceDirectory: mixedreality
+    - name: azure-ai-translation-text
+      groupId: com.azure
+      safeName: azureaitranslationtext
+      ServiceDirectory: translation
+    - name: azure-data-appconfiguration
+      groupId: com.azure
+      safeName: azuredataappconfiguration
+      ServiceDirectory: appconfiguration
+    - name: azure-ai-textanalytics
+      groupId: com.azure
+      safeName: azureaitextanalytics
+      ServiceDirectory: textanalytics
+    - name: azure-ai-contentsafety
+      groupId: com.azure
+      safeName: azureaicontentsafety
+      ServiceDirectory: contentsafety
+    - name: azure-digitaltwins-core
+      groupId: com.azure
+      safeName: azuredigitaltwinscore
+      ServiceDirectory: digitaltwins
+    - name: azure-data-schemaregistry
+      groupId: com.azure
+      safeName: azuredataschemaregistry
+      ServiceDirectory: schemaregistry
+    - name: azure-messaging-eventgrid-namespaces
+      groupId: com.azure
+      safeName: azuremessagingeventgridnamespaces
+      ServiceDirectory: eventgrid
+    - name: azure-security-keyvault-administration
+      groupId: com.azure
+      safeName: azuresecuritykeyvaultadministration
+      ServiceDirectory: keyvault
+    - name: azure-security-attestation
+      groupId: com.azure
+      safeName: azuresecurityattestation
+      ServiceDirectory: attestation
+    - name: azure-security-confidentialledger
+      groupId: com.azure
+      safeName: azuresecurityconfidentialledger
+      ServiceDirectory: confidentialledger
+    - name: azure-monitor-ingestion
+      groupId: com.azure
+      safeName: azuremonitoringestion
+      ServiceDirectory: monitor
+    - name: azure-security-keyvault-keys
+      groupId: com.azure
+      safeName: azuresecuritykeyvaultkeys
+      ServiceDirectory: keyvault
+    - name: azure-data-schemaregistry-apacheavro
+      groupId: com.azure
+      safeName: azuredataschemaregistryapacheavro
+      ServiceDirectory: schemaregistry
+    - name: azure-mixedreality-remoterendering
+      groupId: com.azure
+      safeName: azuremixedrealityremoterendering
+      ServiceDirectory: remoterendering
+    - name: azure-search-documents
+      groupId: com.azure
+      safeName: azuresearch
+      ServiceDirectory: search
+    - name: azure-messaging-servicebus
+      groupId: com.azure
+      safeName: azuremessagingservicebus
+      ServiceDirectory: servicebus
+    - name: azure-iot-deviceupdate
+      groupId: com.azure
+      safeName: azureiotdeviceupdate
+      ServiceDirectory: deviceupdate
+    - name: azure-developer-devcenter
+      groupId: com.azure
+      safeName: azuredeveloperdevcenter
+      ServiceDirectory: devcenter
+    - name: azure-security-keyvault-certificates
+      groupId: com.azure
+      safeName: azuresecuritykeyvaultcertificates
+      ServiceDirectory: keyvault
 
