--- a/eng/code-quality-reports/pom.xml
+++ b/eng/code-quality-reports/pom.xml
@@ -82,6 +82,10 @@
           <groupId>org.apache.logging.log4j</groupId>
           <artifactId>log4j-core</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
