--- a/sdk/clientcore/annotation-processor-test/pom.xml
+++ b/sdk/clientcore/annotation-processor-test/pom.xml
@@ -113,17 +113,15 @@
         <executions>
           <execution>
             <id>run-annotation-processing</id>
-            <phase>generate-sources</phase>
             <goals>
               <goal>compile</goal>
             </goals>
-
             <configuration>
               <source>1.8</source>
               <target>1.8</target>
               <release>8</release>
               <proc>only</proc>
-              <generatedSourcesDirectory>${project.build.directory}/generated-sources/</generatedSourcesDirectory>
+              <generatedSourcesDirectory>${project.basedir}/src/main/java/generated</generatedSourcesDirectory>
               <annotationProcessorPaths>
                 <annotationProcessorPath>
                   <groupId>io.clientcore</groupId>
@@ -134,21 +132,12 @@
               <annotationProcessors>
                 <annotationProcessor>io.clientcore.annotation.processor.AnnotationProcessor</annotationProcessor>
               </annotationProcessors>
-
               <compilerArgs>
                 <arg>-Xlint:-options</arg>
               </compilerArgs>
             </configuration>
           </execution>
         </executions>
-
-        <dependencies>
-          <dependency>
-            <groupId>io.clientcore</groupId>
-            <artifactId>annotation-processor</artifactId>
-            <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:annotation-processor;current} -->
-          </dependency>
-        </dependencies>
       </plugin>
 
       <plugin>
@@ -164,7 +153,7 @@
             </goals>
             <configuration>
               <sources>
-                <source>${basedir}/target/generated-sources</source>
+                <source>${project.basedir}/src/main/java/generated</source>
               </sources>
             </configuration>
           </execution>
